<resources>
    <!-- Menu Strings -->
    <string name="app_name">kCloud Viewer</string>
    <string name="hello_DataLogViewer">Hello kCloud Viewer</string>
    <string name="menu_ScanQRCode">Scan QR code</string>
    <string name="menu_DataSet">View PVO</string>
    <string name="menu_Back">Back to Main Menu</string>
    <string name="menu_ScanQRCodeSelected">Scan QR code Selected</string>
    <string name="menu_login">Click to Login</string>
    <string name="menu_logout">Click to Log Out</string>
    <string name="Permission_Denied">Permission Denied</string>
    <string name="menu_F1">F1</string>
    <string name="_grid_tile_selected"> grid tile selected.</string>
    <string name="scanner_has_been_closed">Scanner has been closed.</string>
    <string name="scanned_value_eq">Scanned value =</string>
    <string name="scanned_value_error">Scanned value error</string>
    <string name="please_scan_qr_code">Please scan QR code</string>
    <string name="edit_site">Edit site: </string>
    <string name="user_name">User: </string>
    <string name="user_name_not_found">User name Not found </string>
    <string name="enter_valid_username_password">Please enter a valid username and password </string>
    <string name="add_kpi">Add KPI</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings">Settings</string>
    <string name="delete_site">Delete Site</string>
    <string name="confirm_delete_site">Are you Sure you want to Delete this Site</string>
    <string name="email_not_valid">Email Address Not Valid</string>
    <string name="add_Site">Add Site</string>
    <string name="site_not_valid_or_different_user">Site QR not Valid or not assugned to User.</string>
    <string name="home">Home</string>
    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_add_site">Add Site</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="data_log_viewer">Data Log Viewer</string>
    <string name="nav_my_account">My Account</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_login">LogIn</string>
    <string name="nav_account">Account</string>
    <string name="nav_general">General</string>
    <string name="nav_kpi">KPI</string>
    <string name="nav_site">Site List</string>
    <string name="nav_details">DETAILS</string>
    <string name="nav_about">About</string>
    <string name="messageLoading">Please Wait While we fetch your Info</string>
    <string name="sitesNotFound">Site list not found !!</string>
    <string name="kpisNotFound">Could not load KPIs, Did you select Site.</string>
    <string name="update_site">Update Site</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="access_control">Access Control</string>
    <string name="login_Dialogue">Login Dialogue</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="search">Search</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="firebase">Firebase</string>
    <string name="local">Local JSON</string>
    <string name="db_type">Database Type</string>
    <string name="api_endpoint">Api Endpoint</string>
    <string name="btn_save">Save</string>
    <string name="please_scan_NFC_tag">Please scan NFC tag</string>
</resources>