<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_F1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:icon="@drawable/industry40"
        android:title="@string/menu_F1"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_button_gear"
        android:title="@string/settings"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_Grid"
        android:icon="@drawable/dataset_24"
        android:title="@string/menu_DataSet"
        android:visible="false"
        app:showAsAction="always" />


    <item
        android:id="@+id/item_ScanQR"
        android:icon="@drawable/ic_menu_qr"
        android:title="@string/menu_ScanQRCode"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_LogIn"
        android:icon="@drawable/ic_menu_login"
        android:title="@string/menu_login"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/item_LogOut"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/item_AddSite"
        android:icon="@drawable/ic_add_24"
        android:title="@string/add_Site"
        app:showAsAction="always"
        android:visible="true"/>
</menu>